<resources>
    <string name="app_name_long">World Boardgaming Championships</string>
    <string name="app_name_short">WBC</string>
    <string name="activity_schedule">WBC Schedule</string>
    <string name="activity_tournament">Tournament</string>
    <string name="activity_event">Event</string>
    <string name="activity_settings">WBC Settings</string>
    <string name="activity_filter">Schedule Filter</string>
    <string name="activity_map">Hotel Map</string>
    <string name="activity_help">Help</string>
    <string name="activity_about">About</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="close">Close</string>
    <string name="create_event">Create Event</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>
    <string name="share">Share</string>
    <string name="menu_finish">My Finishes</string>
    <string name="note">Event Notes</string>
    <string name="search">Search</string>
    <string name="created_events">Created Events</string>
    <string name="settings">Settings</string>
    <string name="filter">Filter</string>
    <string name="edit_event">Edit Event</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_non_tournament">Select Non-Tournament</string>
    <string name="deselect_non_tournament">Deselect Non-Tournament</string>
    <string name="day">DAY</string>
    <string name="time">TIM</string>
    <string name="event">EVENT</string>
    <string name="eClass">CLS</string>
    <string name="format">FORMAT</string>
    <string-array name="duration">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string name="location">LOCATION</string>
    <string name="star">Star a tournament or event</string>
    <string name="finish">Finish</string>
    <string name="preview"><u>Preview</u></string>
    <string name="report"><u>Report</u></string>
    <string name="zero">-</string>
    <string name="first_short">1</string>
    <string name="second_short">2</string>
    <string name="third_short">3</string>
    <string name="fourth_short">4</string>
    <string name="fifth_short">5</string>
    <string name="sixth_short">6</string>
    <string name="first">1st</string>
    <string name="second">2nd</string>
    <string name="third">3rd</string>
    <string name="fourth">4th</string>
    <string name="fifth">5th</string>
    <string name="sixth">6th</string>
    <string name="event_note_hint">Add event note</string>
    <string name="event_format">-Format-</string>
    <string name="event_class">-Class-</string>
    <string name="event_time_and_location">-Time and location-</string>
    <string name="ce_title">Title *</string>
    <string name="ce_location">Location *</string>
    <string name="ce_days">Choose days *</string>
    <string name="ce_at">At</string>
    <string name="ce_for">for</string>
    <string name="ce_hours">hours</string>
    <string name="add">Add</string>
    <string name="mf_upstairs">Map of upstairs</string>
    <string name="mf_downstairs">Map of downstairs</string>
    <string name="ds_tournament">Tournament</string>
    <string name="ds_tournament_hint">Enter tournament</string>
    <string name="ds_formats">Formats</string>
    <string name="ds_rooms">Room</string>
    <string name="dd_string">Are you sure you want to delete</string>
    <string name="settings_notify">Notify me before my starred events start</string>
    <string name="settings_notify_type">Select notification action</string>
    <string name="settings_notify_time_before">Notify me</string>
    <string name="settings_notify_time_after">minutes before each event</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_both">Both</string>
    <string name="sp_file_name">SettingsSPFile</string>
    <string name="sp_notify_starred">notify_starred</string>
    <string name="sp_notify_type">notify_type</string>
    <string name="sp_notify_time">notify_time</string>
    <string name="sp_2014_schedule_version">2014_schedule_version</string>
    <string name="sp_event_starred">2014_event_starred_</string>
    <string name="sp_event_note">2014_event_note_</string>
    <string name="sp_user_event">2014_user_event_</string>
    <string-array name="hours_12">
        <item>7 AM</item>
        <item>8 AM</item>
        <item>0900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
        <item>2200</item>
        <item>2300</item>
        <item>2400</item>
    </string-array>
    <string-array name="hours_24">
        <item>0700</item>
        <item>0800</item>
        <item>0900</item>
        <item>1000</item>
        <item>1100</item>
        <item>1200</item>
        <item>1300</item>
        <item>1400</item>
        <item>1500</item>
        <item>1600</item>
        <item>1700</item>
        <item>1800</item>
        <item>1900</item>
        <item>2000</item>
        <item>2100</item>
        <item>2200</item>
        <item>2300</item>
        <item>2400</item>
    </string-array>
    <string-array name="daysForParsing">
        <item>2014-08-02</item>
        <item>2014-08-03</item>
        <item>2014-08-04</item>
        <item>2014-08-05</item>
        <item>2014-08-06</item>
        <item>2014-08-07</item>
        <item>2014-08-08</item>
        <item>2014-08-09</item>
        <item>2014-08-10</item>
    </string-array>
    <string-array name="days">
        <item>PC Sa 8/2</item>
        <item>PC Su 8/3</item>
        <item>Mo 8/4</item>
        <item>Tu 8/5</item>
        <item>We 8/6</item>
        <item>Th 8/7</item>
        <item>Fr 8/8</item>
        <item>Sa 8/9</item>
        <item>Su 8/10</item>
    </string-array>
    <string-array name="rooms_upstairs">
        <item>Conestoga 1</item>
        <item>Conestoga 2</item>
        <item>Conestoga 3</item>
        <item>Good Spirits Bar</item>
        <item>Heritage</item>
        <item>Lampeter</item>
        <item>Laurel Grove</item>
        <item>Poolside Pavilion</item>
        <item>Showroom</item>
        <item>Vista CD</item>
        <item>Wheatland</item>
    </string-array>
    <string-array name="rooms_downstairs">
        <item>B Corridor</item>
        <item>Ballroom A</item>
        <item>Ballroom A &amp; B</item>
        <item>Ballroom B</item>
        <item>Cornwall</item>
        <item>Hopewell</item>
        <item>Kinderhook</item>
        <item>Limerock</item>
        <item>Marietta</item>
        <item>New Holland</item>
        <item>Paradise</item>
        <item>Strasburg</item>
        <item>Terrace 1</item>
        <item>Terrace 2</item>
        <item>Terrace 3</item>
        <item>Terrace 4</item>
        <item>Terrace 5</item>
        <item>Terrace 6</item>
        <item>Terrace 7</item>
    </string-array>
    <string-array name="rooms_available">
        <item>B Corridor</item>
        <item>Ballroom A</item>
        <item>Ballroom A &amp; B</item>
        <item>Ballroom B</item>
        <item>Conestoga 1</item>
        <item>Conestoga 2</item>
        <item>Conestoga 3</item>
        <item>Cornwall</item>
        <item>Good Spirits Bar</item>
        <item>Heritage</item>
        <item>Hopewell</item>
        <item>Kinderhook</item>
        <item>Lampeter</item>
        <item>Laurel Grove</item>
        <item>Limerock</item>
        <item>Marietta</item>
        <item>New Holland</item>
        <item>Paradise</item>
        <item>Poolside Pavilion</item>
        <item>Showroom</item>
        <item>Strasburg</item>
        <item>Terrace 1</item>
        <item>Terrace 2</item>
        <item>Terrace 3</item>
        <item>Terrace 4</item>
        <item>Terrace 5</item>
        <item>Terrace 6</item>
        <item>Terrace 7</item>
        <item>Vista CD</item>
        <item>Wheatland</item>
    </string-array>
    <string name="about_developer_text">Created by Kevin Broh-Kahn\ndev@boardgamers.org</string>
    <string name="about_others_text">Schedule files courtesy of Craig Trader\nMaps courtesy of Jason Long</string>
    <string name="about_app_header">HOW TO USE THE APP</string>
    <string name="about_app_text">DAYS &amp; TIMES: The app displays ongoing events with a green background, 
		future events yellow, and ended events gray. 
		To change the displayed day, swipe left and right from the main schedule or  
		select 
		a day from the drop down in the action bar. 
		\n\nCUSTOMIZE SCHEDULE: Touch the star to the left of an event to add it to "My Events" 
		list at the top of each day. Use the main menu to access "Created Events," 
		where you can add custom events to your schedule, and "Filter," 
		where you can select which tournaments and convention events are displayed 
		in your schedule. Touch an hour group to show/hide all events 
		starting that hour, or long press to additionally show/hide all following 
		hour groups. Ongoing events for a given hour are included in the group header. 
		\n\nMAP: To view the hotel map, 
		select an event location, which is underlined like a link,  
		or search for a room via "Search" in the main menu.  
		If the room is in the hotel, it will flash on the map. 
		\n\nSAVING: Schedule filter, app settings, tournament finishes, event notes, etc.  
		are all saved automatically, so do not worry about losing your settings! 
		\n\nOTHER: If an event does not have a format or class (i.e. non-tournament events),  
		then that text field will not be shown. For tournament finishes, 
		finishes awarding plaques are in bold while laurels are in italics.
		\n\nPlease contact dev@boardgamers.org with any further questions.</string>
    <string name="about_schedule_header">HOW TO READ THE SCHEDULE</string>
    <string name="about_schedule_text">The
schedule on the main screen is a chronological
listing of events by order of appearance.
Junior Events are listed first, highlighted by a
symbol and are in green. Open Gaming, including
Scheduled Open Games (SOG), and other
non-tournament games are listed in orange. Nongaming
events, such as meetings, registration, and
the auction, are listed in blue. Seminars are listed
in purple. Demonstrations are listed in black, italics.
Advanced rounds that require prior qualification,
such as Finals, are listed in red.
“PC” indicates that an event is part of a Pre-
Con and is limited to Tribune members or
those with a badge good for that particular
“PC” day.
\n\nWhen more than one event starts at the same
time, non-tournament events are listed first,
followed by tournaments—both in alphabetical
order. An alphabetical list of tournaments
can be found in search screen via the main menu.</string>
    <string name="about_dates_header">DATES</string>
    <string name="about_dates_text">Abbreviations for dates are Mo:
Monday, Tu: Tuesday, We: Wednesday,
Th: Thursday, Fr: Friday, Sa: Saturday, Su:
Sunday. “PC Sa” or “PC Su” indicates
that events occur on the Saturday or
Sunday before WBC begins. Separate admission
is required for Non-Tribune Members for
all Pre-Cons.</string>
    <string name="about_times_header">TIMES</string>
    <string name="about_times_text">Times are listed in military time;
e.g., 11 or 1100 is 11 am and 13 or 1300 is 1 pm. Tournament
play commences at the scheduled times for
each event and may run past midnight. No
event may start a round after midnight (exception:
our five night enders) or reconvene
before 9 am without the consent of all remaining
players.</string>
</resources>