<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
      android:id="@+id/ef_time_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:orientation="horizontal">

      <ImageView
        android:id="@+id/ef_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/star"
        android:padding="@dimen/default_margin"/>

      <TextView
        android:id="@+id/ef_title"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/default_margin"
        android:text="@string/event_format"/>

      <TextView
        android:id="@+id/ef_time"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_below="@+id/ef_title"
        android:layout_centerHorizontal="true"
        android:drawablePadding="@dimen/default_margin"
        android:text="@string/event_time_and_location"/>

      <TextView
        android:id="@+id/ef_location"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_below="@+id/ef_time"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <LinearLayout
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
          android:id="@+id/ef_format"
          style="@style/medium_text"
          android:layout_width="wrap_content"
          android:text="@string/event_format"/>

        <TextView
          android:id="@+id/ef_class"
          style="@style/medium_text"
          android:layout_width="wrap_content"
          android:text="@string/event_class"/>

        <TextView
          android:id="@+id/ef_preview_link"
          style="@style/medium_text"
          android:layout_width="wrap_content"
          android:text="@string/preview"
          android:textColor="#0000FF"/>

        <TextView
          android:id="@+id/ef_gm"
          style="@style/medium_text"
          android:layout_width="wrap_content"/>

        <TextView
          android:id="@+id/ef_report_link"
          style="@style/medium_text"
          android:layout_width="wrap_content"
          android:text="@string/report"
          android:textColor="#0000FF"/>
      </LinearLayout>

      <ImageView
        android:id="@+id/ef_box_image"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/event"/>

    </LinearLayout>

    <LinearLayout
      android:id="@+id/ef_finish_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/default_margin"
      android:layout_marginRight="@dimen/default_margin"
      android:layout_marginTop="@dimen/text_margin_large"
      android:orientation="horizontal">

      <TextView
        android:id="@+id/ef_finish_text"
        style="@style/medium_text"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/finish"/>

      <RadioGroup
        android:id="@+id/ef_finish"
        style="@style/medium_text"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <RadioButton
          android:id="@+id/ef_finish_0"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/zero"/>

        <RadioButton
          android:id="@+id/ef_finish_1"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/first_short"/>

        <RadioButton
          android:id="@+id/ef_finish_2"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/second_short"/>

        <RadioButton
          android:id="@+id/ef_finish_3"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/third_short"/>

        <RadioButton
          android:id="@+id/ef_finish_4"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/fourth_short"/>

        <RadioButton
          android:id="@+id/ef_finish_5"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/fifth_short"/>

        <RadioButton
          android:id="@+id/ef_finish_6"
          style="@style/medium_text"
          android:layout_width="0dip"
          android:layout_weight="1"
          android:text="@string/sixth_short"/>
      </RadioGroup>
    </LinearLayout>

    <EditText
      android:id="@+id/ef_note"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/default_margin"
      android:layout_marginRight="@dimen/default_margin"
      android:layout_marginTop="@dimen/text_margin_small"
      android:background="@drawable/edit_text_back"
      android:gravity="left"
      android:hint="@string/event_note_hint"
      android:minLines="4"
      android:padding="4dp"/>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <Button
        android:id="@+id/ef_clear"
        style="@style/button"
        android:layout_weight="1"
        android:text="@string/clear"/>

      <Button
        android:id="@+id/ef_share"
        style="@style/button"
        android:layout_weight="1"
        android:text="@string/share"/>
    </LinearLayout>
  </LinearLayout>

</ScrollView>
