<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"

  android:scrollbarFadeDuration="500">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin"
    android:orientation="vertical">

    <CheckBox
      android:id="@+id/settings_notify"
      style="@style/medium_text"
      android:layout_marginTop="@dimen/text_margin_small"
      android:text="@string/settings_notify"/>

    <TextView
      style="@style/medium_text"
      android:layout_marginTop="@dimen/text_margin_small"
      android:text="@string/settings_notify_type"/>

    <RadioGroup
      android:id="@+id/settings_notify_type"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

      <RadioButton
        android:id="@+id/settings_notify_vibrate"
        style="@style/medium_text"
        android:layout_weight="1"
        android:text="@string/settings_vibrate"/>

      <RadioButton
        android:id="@+id/settings_notify_ring"
        style="@style/medium_text"
        android:layout_weight="1"
        android:text="@string/settings_sound"/>

      <RadioButton
        android:id="@+id/settings_notify_both"
        style="@style/medium_text"
        android:layout_weight="1"
        android:text="@string/settings_both"/>
    </RadioGroup>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/text_margin_small"
      android:orientation="horizontal">

      <TextView
        style="@style/medium_text"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:text="@string/settings_notify_time_before"/>

      <NumberPicker
        android:id="@+id/settings_notify_time"
        style="@style/medium_text"
        android:layout_margin="2dp"
        android:layout_weight="3"/>

      <TextView
        style="@style/medium_text"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:text="@string/settings_notify_time_after"/>
    </LinearLayout>

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/text_margin_small"
      android:orientation="horizontal"
      android:visibility="gone">

      <Button
        android:id="@+id/share"
        style="@style/medium_text"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/share"/>
    </LinearLayout>
  </LinearLayout>

</ScrollView>