<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_margin="@dimen/default_margin"
  android:orientation="vertical">

  <TextView
    style="@style/dialog_header"
    android:text="@string/delete"/>

  <View style="@style/div_h"/>

  <TextView
    style="@style/medium_text"
    android:layout_width="wrap_content"
    android:text="@string/dd_string"/>

  <TextView
    android:id="@+id/dd_text"
    style="@style/medium_text"
    android:gravity="center"/>

  <LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/dd_cancel"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dip"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/cancel"/>

    <Button
      android:id="@+id/dd_delete"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="0dip"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:text="@string/delete"/>
  </LinearLayout>

</LinearLayout>